--- a/home.html
+++ b/home.html
@@ -61,4 +61,14 @@
   includeInmuebles();
   includeBlogs();
 </script>
+
+ <!--Mashup Google Maps-->
+ <iframe src="https://www.google.com/maps/d/embed?mid=1fkA7gGGI3WhxZBekEsfM6cRcV8M&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
+
+ <!--Mashup Wikimapia
+ combina los mapas del buscador Google con un sistema wiki, permitiendo a los usuarios añadir información en forma de notas a cualquier región o localidad del planeta-->>
+ <iframe src="http://wikimapia.org/#lat=4.649314&lon=-74.062958&z=12&l=&ifr=1&m=w&tag=84" width="322" height="322" frameborder="0"></iframe>
+
+
+
 </html>
