Contador de visitas

--- a/home.html
+++ b/home.html
@@ -61,6 +61,11 @@
   includeInmuebles();
   includeBlogs();
 </script>
+<!--Contador de visitas-->
+<h1>Contador de visitas</h1>
+<div id="sfc5kfmlc5cld2jrryywy6s689ehrht48zf"></div><script type="text/javascript" src="https://counter5.optistats.ovh/private/counter.js?c=5kfmlc5cld2jrryywy6s689ehrht48zf&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas para mi web"><img src="https://counter5.optistats.ovh/private/contadorvisitasgratis.php?c=5kfmlc5cld2jrryywy6s689ehrht48zf" border="0" title="contador de visitas para mi web" alt="contador de visitas para mi web"></a></noscript>
+
+
 
  <!--Mashup Google Maps-->
  <iframe src="https://www.google.com/maps/d/embed?mid=1fkA7gGGI3WhxZBekEsfM6cRcV8M&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
@@ -68,7 +73,5 @@
  <!--Mashup Wikimapia
  combina los mapas del buscador Google con un sistema wiki, permitiendo a los usuarios añadir información en forma de notas a cualquier región o localidad del planeta-->>
  <iframe src="http://wikimapia.org/#lat=4.649314&lon=-74.062958&z=12&l=&ifr=1&m=w&tag=84" width="322" height="322" frameborder="0"></iframe>
-
-
 
 </html>
